shodrone.backoffice/src/main/java/drone_code/DroneShowDSLParser.java
// Generated from DroneShowDSL.g4 by ANTLR 4.13.2
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue", "this-escape"})
public class DroneShowDSLParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.13.2", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, T__16=17, 
		T__17=18, T__18=19, T__19=20, T__20=21, T__21=22, T__22=23, T__23=24, 
		T__24=25, T__25=26, T__26=27, T__27=28, VERSION=29, ID=30, NUMBER=31, 
		WS=32, COMMENT=33;
	public static final int
		RULE_dslFile = 0, RULE_droneTypeDecl = 1, RULE_variableDecl = 2, RULE_positionDecl = 3, 
		RULE_velocityDecl = 4, RULE_distanceDecl = 5, RULE_shapeDecl = 6, RULE_commandBlock = 7, 
		RULE_groupBlock = 8, RULE_beforeBlock = 9, RULE_afterBlock = 10, RULE_pauseCommand = 11, 
		RULE_simpleCommand = 12, RULE_command = 13, RULE_exprArguments = 14, RULE_exprList = 15, 
		RULE_expr = 16, RULE_atom = 17, RULE_vector = 18;
	private static String[] makeRuleNames() {
		return new String[] {
			"dslFile", "droneTypeDecl", "variableDecl", "positionDecl", "velocityDecl", 
			"distanceDecl", "shapeDecl", "commandBlock", "groupBlock", "beforeBlock", 
			"afterBlock", "pauseCommand", "simpleCommand", "command", "exprArguments", 
			"exprList", "expr", "atom", "vector"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'DSL'", "'version'", "';'", "'DroneType'", "'Position'", "'='", 
			"'Velocity'", "'Distance'", "'Line'", "'Rectangle'", "'Circle'", "'Circumference'", 
			"'('", "')'", "'group'", "'endgroup'", "'before'", "'endbefore'", "'after'", 
			"'endafter'", "'pause'", "'.'", "','", "'-'", "'*'", "'/'", "'+'", "'PI'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, "VERSION", "ID", "NUMBER", "WS", "COMMENT"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "DroneShowDSL.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public DroneShowDSLParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class DslFileContext extends ParserRuleContext {
		public TerminalNode VERSION() { return getToken(DroneShowDSLParser.VERSION, 0); }
		public DroneTypeDeclContext droneTypeDecl() {
			return getRuleContext(DroneTypeDeclContext.class,0);
		}
		public TerminalNode EOF() { return getToken(DroneShowDSLParser.EOF, 0); }
		public List<VariableDeclContext> variableDecl() {
			return getRuleContexts(VariableDeclContext.class);
		}
		public VariableDeclContext variableDecl(int i) {
			return getRuleContext(VariableDeclContext.class,i);
		}
		public List<ShapeDeclContext> shapeDecl() {
			return getRuleContexts(ShapeDeclContext.class);
		}
		public ShapeDeclContext shapeDecl(int i) {
			return getRuleContext(ShapeDeclContext.class,i);
		}
		public List<CommandBlockContext> commandBlock() {
			return getRuleContexts(CommandBlockContext.class);
		}
		public CommandBlockContext commandBlock(int i) {
			return getRuleContext(CommandBlockContext.class,i);
		}
		public DslFileContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_dslFile; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DroneShowDSLListener ) ((DroneShowDSLListener)listener).enterDslFile(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DroneShowDSLListener ) ((DroneShowDSLListener)listener).exitDslFile(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof DroneShowDSLVisitor ) return ((DroneShowDSLVisitor<? extends T>)visitor).visitDslFile(this);
			else return visitor.visitChildren(this);
		}
	}

	public final DslFileContext dslFile() throws RecognitionException {
		DslFileContext _localctx = new DslFileContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_dslFile);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(38);
			match(T__0);
			setState(39);
			match(T__1);
			setState(40);
			match(VERSION);
			setState(41);
			match(T__2);
			setState(42);
			droneTypeDecl();
			setState(46);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 416L) != 0)) {
				{
				{
				setState(43);
				variableDecl();
				}
				}
				setState(48);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(50); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(49);
				shapeDecl();
				}
				}
				setState(52); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & 7680L) != 0) );
			setState(57);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 1076527104L) != 0)) {
				{
				{
				setState(54);
				commandBlock();
				}
				}
				setState(59);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(60);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class DroneTypeDeclContext extends ParserRuleContext {
		public TerminalNode ID() { return getToken(DroneShowDSLParser.ID, 0); }
		public DroneTypeDeclContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_droneTypeDecl; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DroneShowDSLListener ) ((DroneShowDSLListener)listener).enterDroneTypeDecl(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DroneShowDSLListener ) ((DroneShowDSLListener)listener).exitDroneTypeDecl(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof DroneShowDSLVisitor ) return ((DroneShowDSLVisitor<? extends T>)visitor).visitDroneTypeDecl(this);
			else return visitor.visitChildren(this);
		}
	}

	public final DroneTypeDeclContext droneTypeDecl() throws RecognitionException {
		DroneTypeDeclContext _localctx = new DroneTypeDeclContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_droneTypeDecl);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(62);
			match(T__3);
			setState(63);
			match(ID);
			setState(64);
			match(T__2);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class VariableDeclContext extends ParserRuleContext {
		public PositionDeclContext positionDecl() {
			return getRuleContext(PositionDeclContext.class,0);
		}
		public VelocityDeclContext velocityDecl() {
			return getRuleContext(VelocityDeclContext.class,0);
		}
		public DistanceDeclContext distanceDecl() {
			return getRuleContext(DistanceDeclContext.class,0);
		}
		public VariableDeclContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_variableDecl; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DroneShowDSLListener ) ((DroneShowDSLListener)listener).enterVariableDecl(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DroneShowDSLListener ) ((DroneShowDSLListener)listener).exitVariableDecl(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof DroneShowDSLVisitor ) return ((DroneShowDSLVisitor<? extends T>)visitor).visitVariableDecl(this);
			else return visitor.visitChildren(this);
		}
	}

	public final VariableDeclContext variableDecl() throws RecognitionException {
		VariableDeclContext _localctx = new VariableDeclContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_variableDecl);
		try {
			setState(69);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case T__4:
				enterOuterAlt(_localctx, 1);
				{
				setState(66);
				positionDecl();
				}
				break;
			case T__6:
				enterOuterAlt(_localctx, 2);
				{
				setState(67);
				velocityDecl();
				}
				break;
			case T__7:
				enterOuterAlt(_localctx, 3);
				{
				setState(68);
				distanceDecl();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class PositionDeclContext extends ParserRuleContext {
		public TerminalNode ID() { return getToken(DroneShowDSLParser.ID, 0); }
		public VectorContext vector() {
			return getRuleContext(VectorContext.class,0);
		}
		public PositionDeclContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_positionDecl; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DroneShowDSLListener ) ((DroneShowDSLListener)listener).enterPositionDecl(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DroneShowDSLListener ) ((DroneShowDSLListener)listener).exitPositionDecl(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof DroneShowDSLVisitor ) return ((DroneShowDSLVisitor<? extends T>)visitor).visitPositionDecl(this);
			else return visitor.visitChildren(this);
		}
	}

	public final PositionDeclContext positionDecl() throws RecognitionException {
		PositionDeclContext _localctx = new PositionDeclContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_positionDecl);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(71);
			match(T__4);
			setState(72);
			match(ID);
			setState(73);
			match(T__5);
			setState(74);
			vector();
			setState(75);
			match(T__2);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class VelocityDeclContext extends ParserRuleContext {
		public TerminalNode ID() { return getToken(DroneShowDSLParser.ID, 0); }
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public VelocityDeclContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_velocityDecl; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DroneShowDSLListener ) ((DroneShowDSLListener)listener).enterVelocityDecl(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DroneShowDSLListener ) ((DroneShowDSLListener)listener).exitVelocityDecl(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof DroneShowDSLVisitor ) return ((DroneShowDSLVisitor<? extends T>)visitor).visitVelocityDecl(this);
			else return visitor.visitChildren(this);
		}
	}

	public final VelocityDeclContext velocityDecl() throws RecognitionException {
		VelocityDeclContext _localctx = new VelocityDeclContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_velocityDecl);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(77);
			match(T__6);
			setState(78);
			match(ID);
			setState(79);
			match(T__5);
			setState(80);
			expr(0);
			setState(81);
			match(T__2);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class DistanceDeclContext extends ParserRuleContext {
		public TerminalNode ID() { return getToken(DroneShowDSLParser.ID, 0); }
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public DistanceDeclContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_distanceDecl; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DroneShowDSLListener ) ((DroneShowDSLListener)listener).enterDistanceDecl(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DroneShowDSLListener ) ((DroneShowDSLListener)listener).exitDistanceDecl(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof DroneShowDSLVisitor ) return ((DroneShowDSLVisitor<? extends T>)visitor).visitDistanceDecl(this);
			else return visitor.visitChildren(this);
		}
	}

	public final DistanceDeclContext distanceDecl() throws RecognitionException {
		DistanceDeclContext _localctx = new DistanceDeclContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_distanceDecl);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(83);
			match(T__7);
			setState(84);
			match(ID);
			setState(85);
			match(T__5);
			setState(86);
			expr(0);
			setState(87);
			match(T__2);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ShapeDeclContext extends ParserRuleContext {
		public TerminalNode ID() { return getToken(DroneShowDSLParser.ID, 0); }
		public ExprListContext exprList() {
			return getRuleContext(ExprListContext.class,0);
		}
		public ShapeDeclContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_shapeDecl; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DroneShowDSLListener ) ((DroneShowDSLListener)listener).enterShapeDecl(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DroneShowDSLListener ) ((DroneShowDSLListener)listener).exitShapeDecl(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof DroneShowDSLVisitor ) return ((DroneShowDSLVisitor<? extends T>)visitor).visitShapeDecl(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ShapeDeclContext shapeDecl() throws RecognitionException {
		ShapeDeclContext _localctx = new ShapeDeclContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_shapeDecl);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(89);
			_la = _input.LA(1);
			if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & 7680L) != 0)) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			setState(90);
			match(ID);
			setState(91);
			match(T__12);
			setState(92);
			exprList();
			setState(93);
			match(T__13);
			setState(94);
			match(T__2);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class CommandBlockContext extends ParserRuleContext {
		public BeforeBlockContext beforeBlock() {
			return getRuleContext(BeforeBlockContext.class,0);
		}
		public GroupBlockContext groupBlock() {
			return getRuleContext(GroupBlockContext.class,0);
		}
		public AfterBlockContext afterBlock() {
			return getRuleContext(AfterBlockContext.class,0);
		}
		public PauseCommandContext pauseCommand() {
			return getRuleContext(PauseCommandContext.class,0);
		}
		public SimpleCommandContext simpleCommand() {
			return getRuleContext(SimpleCommandContext.class,0);
		}
		public CommandBlockContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_commandBlock; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DroneShowDSLListener ) ((DroneShowDSLListener)listener).enterCommandBlock(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DroneShowDSLListener ) ((DroneShowDSLListener)listener).exitCommandBlock(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof DroneShowDSLVisitor ) return ((DroneShowDSLVisitor<? extends T>)visitor).visitCommandBlock(this);
			else return visitor.visitChildren(this);
		}
	}

	public final CommandBlockContext commandBlock() throws RecognitionException {
		CommandBlockContext _localctx = new CommandBlockContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_commandBlock);
		try {
			setState(101);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case T__16:
				enterOuterAlt(_localctx, 1);
				{
				setState(96);
				beforeBlock();
				}
				break;
			case T__14:
				enterOuterAlt(_localctx, 2);
				{
				setState(97);
				groupBlock();
				}
				break;
			case T__18:
				enterOuterAlt(_localctx, 3);
				{
				setState(98);
				afterBlock();
				}
				break;
			case T__20:
				enterOuterAlt(_localctx, 4);
				{
				setState(99);
				pauseCommand();
				}
				break;
			case ID:
				enterOuterAlt(_localctx, 5);
				{
				setState(100);
				simpleCommand();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class GroupBlockContext extends ParserRuleContext {
		public List<CommandContext> command() {
			return getRuleContexts(CommandContext.class);
		}
		public CommandContext command(int i) {
			return getRuleContext(CommandContext.class,i);
		}
		public GroupBlockContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_groupBlock; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DroneShowDSLListener ) ((DroneShowDSLListener)listener).enterGroupBlock(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DroneShowDSLListener ) ((DroneShowDSLListener)listener).exitGroupBlock(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof DroneShowDSLVisitor ) return ((DroneShowDSLVisitor<? extends T>)visitor).visitGroupBlock(this);
			else return visitor.visitChildren(this);
		}
	}

	public final GroupBlockContext groupBlock() throws RecognitionException {
		GroupBlockContext _localctx = new GroupBlockContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_groupBlock);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(103);
			match(T__14);
			setState(107);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==ID) {
				{
				{
				setState(104);
				command();
				}
				}
				setState(109);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(110);
			match(T__15);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class BeforeBlockContext extends ParserRuleContext {
		public List<CommandContext> command() {
			return getRuleContexts(CommandContext.class);
		}
		public CommandContext command(int i) {
			return getRuleContext(CommandContext.class,i);
		}
		public List<GroupBlockContext> groupBlock() {
			return getRuleContexts(GroupBlockContext.class);
		}
		public GroupBlockContext groupBlock(int i) {
			return getRuleContext(GroupBlockContext.class,i);
		}
		public BeforeBlockContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_beforeBlock; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DroneShowDSLListener ) ((DroneShowDSLListener)listener).enterBeforeBlock(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DroneShowDSLListener ) ((DroneShowDSLListener)listener).exitBeforeBlock(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof DroneShowDSLVisitor ) return ((DroneShowDSLVisitor<? extends T>)visitor).visitBeforeBlock(this);
			else return visitor.visitChildren(this);
		}
	}

	public final BeforeBlockContext beforeBlock() throws RecognitionException {
		BeforeBlockContext _localctx = new BeforeBlockContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_beforeBlock);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(112);
			match(T__16);
			setState(117);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==T__14 || _la==ID) {
				{
				setState(115);
				_errHandler.sync(this);
				switch (_input.LA(1)) {
				case ID:
					{
					setState(113);
					command();
					}
					break;
				case T__14:
					{
					setState(114);
					groupBlock();
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
				setState(119);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(120);
			match(T__17);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class AfterBlockContext extends ParserRuleContext {
		public List<CommandContext> command() {
			return getRuleContexts(CommandContext.class);
		}
		public CommandContext command(int i) {
			return getRuleContext(CommandContext.class,i);
		}
		public List<GroupBlockContext> groupBlock() {
			return getRuleContexts(GroupBlockContext.class);
		}
		public GroupBlockContext groupBlock(int i) {
			return getRuleContext(GroupBlockContext.class,i);
		}
		public AfterBlockContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_afterBlock; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DroneShowDSLListener ) ((DroneShowDSLListener)listener).enterAfterBlock(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DroneShowDSLListener ) ((DroneShowDSLListener)listener).exitAfterBlock(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof DroneShowDSLVisitor ) return ((DroneShowDSLVisitor<? extends T>)visitor).visitAfterBlock(this);
			else return visitor.visitChildren(this);
		}
	}

	public final AfterBlockContext afterBlock() throws RecognitionException {
		AfterBlockContext _localctx = new AfterBlockContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_afterBlock);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(122);
			match(T__18);
			setState(127);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==T__14 || _la==ID) {
				{
				setState(125);
				_errHandler.sync(this);
				switch (_input.LA(1)) {
				case ID:
					{
					setState(123);
					command();
					}
					break;
				case T__14:
					{
					setState(124);
					groupBlock();
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
				setState(129);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(130);
			match(T__19);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class PauseCommandContext extends ParserRuleContext {
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public PauseCommandContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_pauseCommand; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DroneShowDSLListener ) ((DroneShowDSLListener)listener).enterPauseCommand(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DroneShowDSLListener ) ((DroneShowDSLListener)listener).exitPauseCommand(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof DroneShowDSLVisitor ) return ((DroneShowDSLVisitor<? extends T>)visitor).visitPauseCommand(this);
			else return visitor.visitChildren(this);
		}
	}

	public final PauseCommandContext pauseCommand() throws RecognitionException {
		PauseCommandContext _localctx = new PauseCommandContext(_ctx, getState());
		enterRule(_localctx, 22, RULE_pauseCommand);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(132);
			match(T__20);
			setState(133);
			match(T__12);
			setState(134);
			expr(0);
			setState(135);
			match(T__13);
			setState(136);
			match(T__2);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class SimpleCommandContext extends ParserRuleContext {
		public CommandContext command() {
			return getRuleContext(CommandContext.class,0);
		}
		public SimpleCommandContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_simpleCommand; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DroneShowDSLListener ) ((DroneShowDSLListener)listener).enterSimpleCommand(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DroneShowDSLListener ) ((DroneShowDSLListener)listener).exitSimpleCommand(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof DroneShowDSLVisitor ) return ((DroneShowDSLVisitor<? extends T>)visitor).visitSimpleCommand(this);
			else return visitor.visitChildren(this);
		}
	}

	public final SimpleCommandContext simpleCommand() throws RecognitionException {
		SimpleCommandContext _localctx = new SimpleCommandContext(_ctx, getState());
		enterRule(_localctx, 24, RULE_simpleCommand);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(138);
			command();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
